--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,10 @@ input {
   border: 1px solid #ccc;
   border-radius: 5px;
   transition: border-color 0.3s ease-in-out;
+  width: 302px;
+  @media (max-width: 480px) {
+    width: 100%;
+  }
 }
 
 input:hover {
