--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,24 @@
   -webkit-text-size-adjust: 100%;
 }
 
+body {
+  background: linear-gradient(-45deg, #b581a2, #5933ad, #0b3949, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
 p {
   margin: 0;
 }
@@ -31,11 +49,13 @@ label {
 input {
   display: flex;
   justify-content: center;
+  text-align: center;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
   transition: border-color 0.3s ease-in-out;
-  width: 302px;
+  box-shadow: 0 2px 25px rgba(255, 0, 130, 0.5);
+  width: 25%;
   @media (max-width: 480px) {
     width: 100%;
   }
