--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,14 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-
+* {
+  box-sizing: border-box !important;
+}
 body {
   background: linear-gradient(-45deg, #b581a2, #5933ad, #0b3949, #23d5ab);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
+  height: 100vh;
 }
 
 @keyframes gradient {
